{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 77,
  "lineage": "0056dd88-b8ff-47c7-76f8-9979de40a69f",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:931804277397:security-group/sg-08ad0b8c3703423eb",
            "description": "Complete PostgreSQL example security group",
            "egress": [],
            "id": "sg-08ad0b8c3703423eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL access from within VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "quangch-complete-postgresql-20240228102153036500000001",
            "name_prefix": "quangch-complete-postgresql-",
            "owner_id": "931804277397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0404c00dbff785a56"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "8c0a2c96",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:931804277397:security-group/sg-08972399feafc8d68",
            "description": "Complete PostgreSQL example security group",
            "egress": [],
            "id": "sg-08972399feafc8d68",
            "ingress": [],
            "name": "quangch-complete-postgresql-20240228094408684900000005",
            "name_prefix": "quangch-complete-postgresql-",
            "owner_id": "931804277397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-035f31472fcb27c3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "PostgreSQL access from within VPC",
            "from_port": 5432,
            "id": "sgrule-3357979155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08ad0b8c3703423eb",
            "security_group_rule_id": "sgr-0aa2d714fa2c28659",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:931804277397:subnet/subnet-0467dc6d7791c971d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0467dc6d7791c971d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931804277397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-035f31472fcb27c3c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:931804277397:subnet/subnet-027b24bf9923a489a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b24bf9923a489a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931804277397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-035f31472fcb27c3c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:931804277397:subnet/subnet-0b65efbd67ed21cea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b65efbd67ed21cea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931804277397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-035f31472fcb27c3c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:931804277397:vpc/vpc-035f31472fcb27c3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fa8eb3110919b1a",
            "default_route_table_id": "rtb-0b6dc9a9b6bd247bb",
            "default_security_group_id": "sg-0676fafcae2ceac1b",
            "dhcp_options_id": "dopt-04bbeb79cd8cb4f81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035f31472fcb27c3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6dc9a9b6bd247bb",
            "owner_id": "931804277397",
            "tags": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "quangch-complete-postgresql",
              "Name": "quangch-complete-postgresql",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}